------------------------------------
. #20: multiple same operations
. #16: web console authentication
. #34: 0% success on write
. #11: job management
. #70: multiple main stages
. #30: no historical workloads after restart
. add histogram selector to define histogram size distribution
. #58: sleep between stage
. #84: multiple init/prepare/cleanup/dispose from config UI

  COSBench 0.3.1.2 (13-ww31.3)
------------------------------------
1. add filewrite related configuration in UI and user guide
2. fix one issue which causes failures for amplistor read operations (#76)
3. add multiple main stage support in configuration UI (#80)
4. fix one issue which causes confusion (sucessfuly) status even 0% successfuly operations (34) 
5. update document and configuration sample to show how to configure for s3 compatible systems
6. clarify issue #71 about how to route S3 traffic to/from specific AWS S3 region.
  
  COSBench 0.3.1.1 (13-ww29.2)
------------------------------------
1. librados based ceph adaptor is merged.
2. new operators (fileread/filewrite) are supported.
3. fix one issue which causes unexpected termination especially at large object size (#60)

  COSBench 0.3.1.0 (13-ww21.3)
------------------------------------
1. revise the fix of inconsistence between snapshot data and report (#18)
2. a few minor enhancement

  COSBench 0.3.0.8 (13-ww20.5)
------------------------------------
1. replace the broken 0.3.0.7 

  COSBench 0.3.0.7 (13-ww20.4)
------------------------------------
1. fix a bug which causes secret key containing "=" doesn't work in s3 adapter (#45)
2. support self-signed certificate for HTTPS (#15)
3. revise the fix for range selector in main stage to (#31)
4. fix a bug which causes inconsistent snapshop data at high concurrency. (#18)

COSBench 0.3.0.1 (13-ww17.5)
------------------------------------
1. add S3 adapter alpha (#36)
2. fix a bug which causes can't login to ceph through swift gateway (#38)